# boostvoronoi.rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: clippy.yml  rust.yml
benches/: bench.rs
benches/input_data/: voronoi_segment.txt
cpp_projects/boost_src/boost/polygon/: interval_concept.hpp  interval_data.hpp  interval_traits.hpp  isotropy.hpp  point_concept.hpp  point_data.hpp  point_traits.hpp  rectangle_concept.hpp  rectangle_data.hpp  rectangle_traits.hpp  segment_concept.hpp  segment_traits.hpp  voronoi.hpp  voronoi_builder.hpp  voronoi_diagram.hpp  voronoi_geometry_type.hpp
cpp_projects/boost_src/boost/polygon/detail/: voronoi_ctypes.hpp  voronoi_predicates.hpp  voronoi_robust_fpt.hpp  voronoi_structures.hpp
cpp_projects/test_generator/src/: test_generator.cpp
cpp_projects/voronoi_visual_simple/src/: voronoi_visual_utils.hpp  voronoi_visualizer.cpp
example/: debug_ce.rs  debug_pps_ce.rs  debug_pss_ce.rs  fltk_gui.rs  main.rs  piston_gui.rs  readme.rs  simple.rs  stress_test.rs  stress_test2.rs
example/input_data/: rust_logo.rs
example/input_data/polygon/: cube_in_cube.txt  delta_wing.txt  issue_43_1.txt  issue_43_2.txt  issue_43_3.txt  issue_43_4.txt  polygon_013.txt  triangle.txt  two_segments_3.txt
example/input_data/primary/: 3_segments_problem_003.txt  3_segments_problem_004.txt  3_segments_problem_005.txt  3_segments_problem_006.txt  3_segments_problem_007.txt  3_segments_problem_008.txt  3_segments_problem_009.txt  3_segments_problem_010.txt  a_test.txt  primary_050.txt  primary_051.txt  primary_054.txt  primary_058.txt  primary_059.txt  primary_060.txt  primary_061.txt  primary_062.txt  primary_064.txt  primary_068.txt  primary_svn_problem_12067.txt  stress_test_problem_001.txt  stress_test_problem_002.txt  stress_test_problem_003.txt  stress_test_problem_004.txt  stress_test_problem_005.txt  stress_test_problem_006.txt  stress_test_problem_007.txt  stress_test_problem_008.txt  stress_test_problem_009.txt  stress_test_problem_010.txt  stress_test_problem_011.txt  stress_test_problem_012.txt  stress_test_problem_013.txt  stress_test_problem_014.txt  stress_test_problem_015.txt  stress_test_problem_016.txt  stress_test_problem_017.txt  stress_test_problem_018.txt  stress_test_problem_019.txt  two_segments_4.txt
src/: beach_line.rs  beachline.rs  builder.rs  circle_event.rs  circleevent.rs  ctypes.rs  diagram.rs  end_point.rs  endpoint.rs  experiment.rs  experiment2.rs  extended_exp_fpt.rs  extended_int.rs  file_reader.rs  geometry.rs  lib.rs  linked_list.rs  main.rs  predicate.rs  robust_fpt.rs  site_event.rs  siteevent.rs  sync_diagram.rs  visual_utils.rs  voronoi_beachline.rs  voronoi_builder.rs  voronoi_circleevent.rs  voronoi_ctypes.rs  voronoi_diagram.rs  voronoi_endpoint.rs  voronoi_error.rs  voronoi_predicate.rs  voronoi_robust_fpt.rs  voronoi_siteevent.rs  voronoi_structures.rs  voronoi_visual_utils.rs
src/beach_line/: test2.rs  test3.rs  tests.rs  tests1.rs
src/beachline/: tests.rs
src/builder/: tests.rs
src/linked_list/: test.rs
src/predicate/: tests.rs
src/robust_fpt/: extendedint_tests.rs  robustdif_tests.rs  robustfpt_tests.rs
src/site_event/: tests.rs
src/siteevent/: tests.rs
src/voronoi_beachline/: tests.rs
src/voronoi_builder/: tests.rs
src/voronoi_predicate/: tests.rs
src/voronoi_robust_fpt/: robustdif_tests.rs  robustfpt_tests.rs
src/voronoi_siteevent/: tests.rs
src/voronoi_structures/: tests.rs
tests/: cgmath_test.rs  common.rs  geo_test.rs  glam_test.rs  mint_test.rs  point_tests_1.rs  pps_problem.rs  sample_polygon_test.rs  sample_primary_1_30.rs  sample_primary_1_30_tests.rs  sample_primary_31_47.rs  sample_primary_31_72.rs  sample_primary_48_58.rs  sample_primary_48_72.rs  sample_primary_59_64.rs  sample_primary_65.rs  sample_primary_65_65.rs  sample_primary_66.rs  sample_primary_67.rs  sample_primary_68.rs  sample_primary_69.rs  sample_primary_70_72.rs  sample_primary_problem_1_10.rs  sample_primary_problem_1_7.rs  segment_point_tests_1.rs  segment_test_1.rs  segment_test_2.rs  segment_test_3.rs  segment_test_32bit.rs  segment_test_4.rs  segment_test_5.rs  segment_tests_1.rs  segments_test_2.rs  segments_test_3.rs  serde_test.rs  stress_test_11.rs  stress_test_12.rs  stress_test_13.rs  stress_test_14.rs  stress_test_15.rs  (+1 more)
workspace/boostvoronoi_core/: Cargo.toml  build.rs
workspace/boostvoronoi_core/src/: beach_line.rs  builder.rs  circle_event.rs  ctypes.rs  diagram.rs  end_point.rs  extended_exp_fpt.rs  extended_int.rs  file_reader.rs  geometry.rs  lib.rs  predicate.rs  robust_fpt.rs  robust_sqrt_expr.rs  site_event.rs  sync_diagram.rs  visual_utils.rs
workspace/boostvoronoi_core/src/beach_line/: test2.rs  test3.rs  tests1.rs
workspace/boostvoronoi_core/src/builder/: tests.rs
workspace/boostvoronoi_core/src/geometry/: tests.rs
workspace/boostvoronoi_core/src/predicate/: circle_existence.rs  exact_circle_formation.rs  lazy_circle_formation.rs  tests.rs
workspace/boostvoronoi_ext/: Cargo.toml
workspace/boostvoronoi_ext/src/: extended_exp_fpt.rs  extended_int.rs  lib.rs  robust_fpt.rs
workspace/boostvoronoi_ext/src/extended_int/: extendedint_tests.rs
workspace/boostvoronoi_ext/src/robust_fpt/: robustfpt_tests.rs
