[package]
name = "boostvoronoi"
version = "0.9.3"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi ported to 100% rust"
readme = "README.md"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
keywords = ["voronoi", "sweepline", "geometry"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
    "examples/input_data/*"
]

[workspace]
members = ["workspace/boostvoronoi_core"]

[dependencies]
boostvoronoi_core = { path = "workspace/boostvoronoi_core", default-features = false}

# These features are only for debug purposes, should normally not be used
[features]
console_debug = ["boostvoronoi_core/console_debug"]
ce_corruption_check = ["boostvoronoi_core/ce_corruption_check"]

# Math type conversions.
glam = ["boostvoronoi_core/glam"]
mint = ["boostvoronoi_core/mint"]
geo = ["boostvoronoi_core/geo"]
cgmath = ["boostvoronoi_core/cgmath"]

[[example]]
name = "fltk_gui"
path = "example/fltk_gui.rs"

# this example is for development test purposes only
[[example]]
name = "main"
path = "example/main.rs"

# this is the README.md example
[[example]]
name = "readme"
path = "example/readme.rs"

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
fltk = "1.2"
criterion = "0.3"
approx = "0.5"
regex = "1.5"
rand = "0.8"
lazy_static = "1.4"
bitflags = "1.3"
geo_cr = {package="geo", version="0.18"}
ordered-float = "2.8"
vob="3.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }

