[package]
name = "boostvoronoi"
version = "0.11.0"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi ported to 100% rust"
readme = "README.md"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
keywords = ["voronoi", "sweepline", "geometry"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
    "examples/input_data/*"
]

[workspace]
members = ["workspace/boostvoronoi_core", "workspace/boostvoronoi_ext"]

[dependencies]
boostvoronoi_core = { path = "workspace/boostvoronoi_core", version="=0.11.0", default-features = false}
boostvoronoi_ext = { path = "workspace/boostvoronoi_ext", version="=0.11.0", default-features = false}

# These features are only for debug purposes, should normally not be used
[features]
console_debug = ["boostvoronoi_core/console_debug"]
ce_corruption_check = ["boostvoronoi_core/ce_corruption_check"]

# Math type conversions.
glam = ["boostvoronoi_core/glam"]
mint = ["boostvoronoi_core/mint"]
geo = ["boostvoronoi_core/geo"]
cgmath = ["boostvoronoi_core/cgmath"]
nalgebra = ["boostvoronoi_core/nalgebra"]
serde = ["boostvoronoi_core/serde"]

[[example]]
name = "fltk_gui"
path = "example/fltk_gui.rs"

# this example is for development test purposes only
[[example]]
name = "main"
path = "example/main.rs"

# this is the README.md example
[[example]]
name = "readme"
path = "example/readme.rs"

[[example]]
name = "stress_test"
path = "example/stress_test.rs"
required-features = ["geo"]

[dev-dependencies]
approx = "0.5.1"
fltk = "1.4.15"
criterion = "0.5.1"
regex = "1.10.2"
rand = "0.8.5"
lazy_static = "1.4.0"
bitflags = "2.4.1"
geo_cr = {package="geo", version="0.26"}
ordered-float = "4.1.1"
vob="3.0.3"
serde_json = "1.0.107"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true

[badges]
maintenance = { status = "actively-developed" }

