[package]
name = "boostvoronoi_core"
version = "0.10.0"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi ported to 100% rust"
readme = "README.md"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
keywords = ["voronoi", "sweepline", "geometry"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
    "examples/input_data/*"
]

[dependencies]
num = "0.4"
ordered-float = "2.8"
ahash = "0.7"
num-traits = "0.2"
vob="3.0"
thiserror = "1.0"
bitflags = "1.3"
libm = "0.2"
smallvec = "1.7"
itertools = "0.10"
cpp_map = "0.1"
approx = "0.5"
# using "mint" feature will enable From traits
mint = {version="0.5.8", optional=true}
# using "geo" feature will enable From traits
geo = {version="0.18", optional=true}
# using "cgmath" feature will enable From traits
cgmath = {version="0.18", optional=true}
# using "glam" feature will enable From traits
glam = {version="0.20", optional=true}

[dev-dependencies]
regex = "1.5"
lazy_static = "1.4"

# These features are only for debug purposes, should normally not be used
[features]
console_debug = []
ce_corruption_check = []

[build-dependencies]
version_check = "0.9"

[badges]
maintenance = { status = "actively-developed" }

