[package]
name = "boostvoronoi_core"
version = "0.11.0"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi private workspace (this workspace will be re-integrated in the main crate in next release)"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
    "examples/input_data/*"
]

[dependencies]
approx = "0.5.1"
boostvoronoi_ext = { path = "../boostvoronoi_ext", version="=0.11.0", default-features = false}
ordered-float = "4.1.1"
ahash = "0.8.6"
vob="3.0.3"
thiserror = "1.0.50"
bitflags = "2.4.1"
itertools = "0.11.0"
cpp_map = "0.1.1"
# using "mint" feature will enable From traits
mint = {version="0.5.9", optional=true}
# using "geo" feature will enable From traits
geo = {version="0.26.0", optional=true}
# using "cgmath" feature will enable From traits
cgmath = {version="0.18.0", optional=true}
# using "glam" feature will enable From traits
glam = {version="0.24.2", optional=true}
# using "nalgebra" feature will enable From traits
nalgebra = {version="0.32.3", optional=true}
serde = { version = "1.0.132", features = ["derive"], optional = true }
num-traits = "0.2.17"

[dev-dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"

# These features are only for debug purposes, should normally not be used
[features]
console_debug = []
ce_corruption_check = []

[build-dependencies]
version_check = "0.9.4"


