[package]
name = "boostvoronoi_ext"
version = "0.10.3"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi private workspace"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[dependencies]
num-traits = "~0.2"
libm = "~0.2"
smallvec = "~1.7"
ordered-float = "~2.8"
approx = "~0.5"
