[package]
name = "boostvoronoi_ext"
version = "0.11.0"
authors = ["eadf <lacklustr@protonmail.com>"]
edition = "2021"
description = "Boost voronoi private workspace (this workspace will be re-integrated in the main crate in next release)"
repository = "https://github.com/eadf/boostvoronoi.rs"
license = "BSL-1.0"
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[dependencies]
num-traits = "0.2.17"
approx = "0.5.1"
libm = "0.2.8"
smallvec = "1.11.1"
ordered-float = "4.1.1"
